@@ -44,7 +44,7 @@
         <setting id="torrent.min.seeders" type="slider" label="Minimum Seeders" visible="false" default="1" range="1,100" option="int" />
         <setting type="lsep" label="32343" />
         <setting id="bookmarks" type="bool" label="32344" default="true" />
-        <setting id="bookmarks.auto" type="bool" label="32623" default="false" enable="eq(-2,true)" />
+        <setting id="bookmarks.auto" type="bool" label="32623" default="false" enable="eq(-1,true)" />
         <setting type="lsep" label="32372" />
         <setting id="crefresh" type="bool" label="32373" default="false" />
     </category>
